[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/InstrumentConfig/InstrumentConfigItem.gd" type="Script" id=1]
[ext_resource path="res://scenes/InstrumentConfig/InstrumentConfigRow_Key.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/InstrumentConfig/InstrumentConfigRow_Octave.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/InstrumentConfig/InstrumentConfigRow_Letters.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.662745, 0.266667, 0.266667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.239216, 0.0509804, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.231373, 0.0352941, 0.0352941, 0.6 )
shadow_size = 1

[node name="InstrumentConfigItem" type="PanelContainer"]
margin_right = 490.0
margin_bottom = 105.0
script = ExtResource( 1 )

[node name="Vert" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 483.0
margin_bottom = 98.0
custom_constants/separation = 5

[node name="Row_InstrumentTitle" type="HBoxContainer" parent="Vert"]
margin_right = 476.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Vert/Row_InstrumentTitle"]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 15.0
text = "Instrument"

[node name="h_spacer" type="ColorRect" parent="Vert/Row_InstrumentTitle"]
margin_left = 76.0
margin_right = 418.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
color = Color( 0.243137, 0.235294, 0.27451, 1 )

[node name="Button" type="Button" parent="Vert/Row_InstrumentTitle"]
margin_left = 422.0
margin_right = 476.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 1 )
text = "Remove"

[node name="AddOctaveButton" type="Button" parent="Vert"]
margin_top = 21.0
margin_right = 476.0
margin_bottom = 41.0
text = "Add Octave"

[node name="Row_Octave" parent="Vert" instance=ExtResource( 3 )]
visible = false
margin_top = 46.0
margin_bottom = 66.0

[node name="Row_Key" parent="Vert" instance=ExtResource( 2 )]
visible = false
margin_bottom = 70.0

[node name="Row_Letters" parent="Vert" instance=ExtResource( 4 )]
visible = false
margin_top = 46.0
margin_bottom = 66.0

[connection signal="pressed" from="Vert/Row_InstrumentTitle/Button" to="." method="_on_instrument_remove_pressed"]
[connection signal="pressed" from="Vert/AddOctaveButton" to="." method="_on_octave_add_pressed"]
